--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
  "pre-commit>=4.0.1",
  "google-cloud-bigquery>=3.29.0",
  "pytest-cov>=6.0.0",
+ "ruamel-yaml>=0.18.10",
 ]
 
 [uv]
